<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#FFF4E6"
    android:layoutDirection="ltr"
    tools:context=".activities.UploadDataActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_upload_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/red"
        app:title="Upload Data"
        app:titleTextColor="@color/white"
        />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="10dp"
            >

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/choose_blood_type"
                android:textStyle="bold"
                android:textColor="#000"
                android:textSize="18sp"
                android:padding="10dp"
                android:layout_margin="10dp"
                />

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:layout_gravity="start"
                android:gravity="start"
                android:layout_marginHorizontal="15dp"
                android:id="@+id/list_blood_type"

                />



            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edit_text_name_sheet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_name_of_sheet"
                android:textSize="15sp"
                android:padding="10dp"
                android:textColorHint="#9b9898"
                android:textColor="#8b8989"
                android:inputType="text"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="10dp"

                />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edit_text_url_sheet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_url_of_sheet"
                android:textSize="15sp"
                android:padding="10dp"
                android:textColorHint="#9b9898"
                android:textColor="#8b8989"
                android:inputType="text"
                android:layout_marginHorizontal="10dp"
                android:layout_marginVertical="10dp"

                />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="20dp"
                app:cardCornerRadius="20dp"
                app:cardElevation="10dp"

                >

                <com.balysv.materialripple.MaterialRippleLayout
                    style="@style/RippleStyleGrey"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/button_upload"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="#ed418eb1"
                        android:text="@string/upload"
                        android:textColor="#fff"
                        android:textSize="18sp"
                        android:textStyle="bold"

                        />

                </com.balysv.materialripple.MaterialRippleLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </ScrollView>

</LinearLayout>